--- a/Equity-Hedge-Notebook-Maddie.ipynb
+++ b/Equity-Hedge-Notebook-Maddie.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,15 @@
     "include_fi = False\n",
     "strat_drop_list = ['Vortex','99%/90% Put Spread']\n",
     "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns['Daily']\n"
    ]
   },
   {
@@ -109,33 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "strategy_list = ['DSPG','3M_SMI_0.125d_0.10d']\n",
-    "filename = 'Credit Suisse DispHistory_SMI_0216_send.xlsx'\n",
-    "sheet_name = 'data'\n",
+    "strategy_list = ['Esprso']\n",
+    "filename = 'esprso.xlsx'\n",
+    "sheet_name = 'Sheet1'\n",
     "data_type = 'index'\n",
     "new_strategy = dm.get_new_strategy_returns_data(filename, sheet_name, strategy_list)\n",
     "new_strategy_dict = dm.get_data_dict(new_strategy, data_type)\n",
     "returns = dm.merge_dicts(returns, new_strategy_dict)\n",
     "new_strat=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_data= pd.read_excel(dm.NEW_DATA+'early_roll_vix_profit_data.xlsx',\n",
-    "                                           sheet_name = 'All', index_col=0)\n",
-    "barclays = full_data[['2W + 85% Profit']]\n",
-    "barclays_dict = dm.get_data_dict(barclays)\n",
-    "returns = dm.merge_dicts(returns,barclays_dict)\n",
-    "new_strat =True\n",
-    "weighted = [True, False]"
    ]
   },
   {
@@ -147,103 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "notional value (Billions) for SPTR: 19\n",
-      "notional value (Billions) for Down Var: 1\n",
-      "notional value (Billions) for VOLA: 1\n",
-      "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR: 1\n",
-      "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: 0.3\n",
-      "notional value (Billions) for Def Var: 0.3\n",
-      "notional value (Billions) for DSPG: 0.5\n",
-      "notional value (Billions) for 3M_SMI_0.125d_0.10d: 0.5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_fee2c_\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th class=\"col_heading level0 col0\" >SPTR</th>\n",
-       "      <th class=\"col_heading level0 col1\" >Down Var</th>\n",
-       "      <th class=\"col_heading level0 col2\" >VOLA</th>\n",
-       "      <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>\n",
-       "      <th class=\"col_heading level0 col4\" >VRR</th>\n",
-       "      <th class=\"col_heading level0 col5\" >GW Dispersion</th>\n",
-       "      <th class=\"col_heading level0 col6\" >Corr Hedge</th>\n",
-       "      <th class=\"col_heading level0 col7\" >Def Var</th>\n",
-       "      <th class=\"col_heading level0 col8\" >DSPG</th>\n",
-       "      <th class=\"col_heading level0 col9\" >3M_SMI_0.125d_0.10d</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fee2c_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
-       "      <td id=\"T_fee2c_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col4\" class=\"data row0 col4\" >$1.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
-       "      <td id=\"T_fee2c_row0_col6\" class=\"data row0 col6\" >$0.30</td>\n",
-       "      <td id=\"T_fee2c_row0_col7\" class=\"data row0 col7\" >$0.30</td>\n",
-       "      <td id=\"T_fee2c_row0_col8\" class=\"data row0 col8\" >$0.50</td>\n",
-       "      <td id=\"T_fee2c_row0_col9\" class=\"data row0 col9\" >$0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fee2c_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
-       "      <td id=\"T_fee2c_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
-       "      <td id=\"T_fee2c_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
-       "      <td id=\"T_fee2c_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
-       "      <td id=\"T_fee2c_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
-       "      <td id=\"T_fee2c_row1_col4\" class=\"data row1 col4\" >5.26%</td>\n",
-       "      <td id=\"T_fee2c_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
-       "      <td id=\"T_fee2c_row1_col6\" class=\"data row1 col6\" >1.58%</td>\n",
-       "      <td id=\"T_fee2c_row1_col7\" class=\"data row1 col7\" >1.58%</td>\n",
-       "      <td id=\"T_fee2c_row1_col8\" class=\"data row1 col8\" >2.63%</td>\n",
-       "      <td id=\"T_fee2c_row1_col9\" class=\"data row1 col9\" >2.63%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fee2c_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
-       "      <td id=\"T_fee2c_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
-       "      <td id=\"T_fee2c_row2_col1\" class=\"data row2 col1\" >15.15%</td>\n",
-       "      <td id=\"T_fee2c_row2_col2\" class=\"data row2 col2\" >15.15%</td>\n",
-       "      <td id=\"T_fee2c_row2_col3\" class=\"data row2 col3\" >15.15%</td>\n",
-       "      <td id=\"T_fee2c_row2_col4\" class=\"data row2 col4\" >15.15%</td>\n",
-       "      <td id=\"T_fee2c_row2_col5\" class=\"data row2 col5\" >15.15%</td>\n",
-       "      <td id=\"T_fee2c_row2_col6\" class=\"data row2 col6\" >4.55%</td>\n",
-       "      <td id=\"T_fee2c_row2_col7\" class=\"data row2 col7\" >4.55%</td>\n",
-       "      <td id=\"T_fee2c_row2_col8\" class=\"data row2 col8\" >7.58%</td>\n",
-       "      <td id=\"T_fee2c_row2_col9\" class=\"data row2 col9\" >7.58%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x229632a6640>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get notional weights\n",
     "notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
+    "\n",
+    "returns = dm.create_vrr_portfolio(returns,notional_weights)\n",
+    "notional_weights[4:6] = [notional_weights[4] + notional_weights[5]]\n",
+    "\n",
     "df_weights = get_df_weights(notional_weights, list(returns['Monthly'].columns), include_fi)\n",
-    "fmt.get_notional_styler(df_weights)"
+    "\n",
+    "fmt.get_notional_styler(df_weights)\n"
    ]
   },
   {
@@ -280,10 +190,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Corr doesnt work due to heatmapz not being able to be downloaded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list, weighted=weighted,\n",
@@ -518,24 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4350a0a91f5a4cd2b6a62c1bb56736fb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='strategy', options=('SPTR', 'Down Var', 'VOLA', 'Dynamic Put Sprea…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "month_ret_table= dm.all_strat_month_ret_table(returns[\"Monthly\"], notional_weights = notional_weights, weighted = True)\n",
     "strat_list = list(month_ret_table.keys())\n",
